feat: enhance user profile and subject data enrichment
- Fix teacher semester logic to use teacher's grades instead of subject grades
- Add comprehensive teacher name information to student subject responses
- Enrich teacher profiles with complete subject details instead of level mappings
- Add missing subject fields (description, active status) to responses
- Improve code organization with proper import statements
- Remove redundant level grouping in favor of direct subject information